# huginn

./: .gitmodules  Makefile  README.md  huginn.jdebug  huginn.kdev4
armgcc/: build.sh  clean.sh
include/: metal  openamp  openamp.h  openamp_conf.h  rsc_table.h  virt_uart.h
openamp/open-amp/lib/include/openamp/: virtio_ring.h
openamp/open-amp/lib/remoteproc/: remoteproc_virtio.c
openamp/open-amp/lib/rpmsg/: rpmsg.c  rpmsg_virtio.c
openamp/open-amp/lib/virtio/: virtio.c  virtqueue.c
src/: CMakeLists.txt  hardware_init.c  main.c  mbox_imx.c  openamp.c  rpmsg_config.h  rsc_table.c
src/imx7_colibri_m4/: gpio_pins.c  gpio_pins.h  rsc_table.c  rsc_table.d  rsc_table.h
src/middleware/multicore/open-amp/porting/env/freertos/: rpmsg_porting.c
src/platform/devices/MCIMX7D/linker/gcc/: MCIMX7D_M4_ocram.ld  MCIMX7D_M4_tcm.ld
src/platform/drivers/inc/: rdc.h
src/rtos/FreeRTOS/Source/include/: FreeRTOS.h
virtual_driver/: virt_uart.c
